# sprucelab

./: .env.dev.example  .env.test.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  ENVIRONMENT_SETUP.md  Justfile  LAYERED_ARCHITECTURE_IMPLEMENTATION.md  LOD_MESH_IMPLEMENTATION.md  MIGRATION_GUIDE.md  MVP_VIEWER_README.md  QUICKSTART.md  QUICK_START.md  RAILWAY_ENV_SETUP.md  README.md  READY_TO_GO.md  RUN_WEB_IFC_VIEWER.md  SCRIPT_EXECUTION_SYSTEM.md  SESSION_003_SUCCESS.md  SESSION_012_SUMMARY.md  SESSION_SUMMARY_LOD_IMPLEMENTATION.md  SETUP.txt  dev.sh  docker-compose.dev.yml  docker-compose.yml  generate_fragments.sh  git-commit.ps1  git-init-and-commit.ps1  ifc_to_pointcloud_from_ito.py  json_to_ifc.py  project.yaml  pytest.ini  railway.toml  requirements.txt  sample.txt  simplify_and_recreate_ifc.py
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
backend/: DJANGO_Q_SETUP.md  Dockerfile.django  README.md  check_fragments.py  create_file_size_migration.py  database.sqlite  database.sqlite-journal  environment.yml  fix_file_urls.py  fix_file_urls.sql  fix_file_urls_v2.py  railway.toml  requirements.txt
cli/: README.md  pyproject.toml  pytest.ini
cli/spruce/: __init__.py  __main__.py  _auth.py  _errors.py  api_client.py  capabilities.py  claims.py  cli.py  config.py  dev.py  embed.py  executor.py  files.py  log.py  models.py  scripts.py  types.py  verify.py  webhooks.py
cli/spruce/cde/: __init__.py
cli/spruce/steps/: __init__.py
cli/spruce/utils/: __init__.py
cli/sprucelab_mcp/: README.md  pyproject.toml
cli/sprucelab_mcp/sprucelab_mcp/: __init__.py  __main__.py  client.py  server.py
cli/tests/: conftest.py  test_capabilities_cli.py  test_claims_cli.py  test_errors.py  test_files_cli.py  test_log_cli.py  test_models_cli.py  test_scripts_cli.py  test_types_cli.py  test_verify_cli.py  test_webhooks_cli.py
cli/tests/integration/: conftest.py  test_smoke_live.py
dev-data/: README.md
django-test/: README.md  check_geometry_data.py  check_model_status.py  check_processing_report.py  check_viewer_groups.py  clear_geometry_data.py  clear_geometry_data.sql  clear_geometry_data_simple.sql  delete_old_pofin_templates.py  reset_stuck_model.py  test_mmi_flexibility.py  test_scripts.py  test_viewer_api.py  verify_mmi_templates.py
docs/: design-system.html  dev.md
frontend/: .env.development  (+15 more)
(+1107 files in other folders)
