[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sprucelab-mcp"
version = "0.1.0"
description = "MCP server for Sprucelab — drop into Claude Desktop / Cursor and get the full agent surface as typed tool calls."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Sprucelab" }]
keywords = ["bim", "ifc", "mcp", "agent", "agentic", "automation", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "respx>=0.20.0"]

[project.urls]
Homepage = "https://www.sprucelab.io/agents"
Benchmarks = "https://www.sprucelab.io/benchmarks"
Source = "https://github.com/EdvardGK/sprucelab"

[project.scripts]
sprucelab-mcp = "sprucelab_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["sprucelab_mcp"]
